--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     ]
   },
   "dependencies": {
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5",
     "use-sound": "^4.0.1"
   }
 }
