--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5",
     "use-sound": "^4.0.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.5"
   }
 }
